Salesforce_Classes/force-app/main/default/objects/Trigger_Validations__mdt/Trigger_Validations__mdt.object-meta.xml
<CustomObject>
    <label>Trigger Validations</label>
    <pluralLabel>Trigger Validations</pluralLabel>
</CustomObject>