Salesforce_Classes/force-app/main/default/objects/Trigger_Validations__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <metadataRelationshipControllingField>Trigger_Validations__mdt.sObject_Name__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Trigger_Validations</relationshipLabel>
    <relationshipName>Trigger_Validations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>