Salesforce_Classes/force-app/main/default/objects/Trigger_Validations__mdt/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Required ?</label>
    <type>Checkbox</type>
</CustomField>