Salesforce_Classes/force-app/main/default/objects/Trigger_Validations__mdt/fields/sObject_Name__c.field-meta.xml
<CustomField>
    <fullName>sObject_Name__c</fullName>
    <label>sObject Name</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Trigger_Validations</relationshipLabel>
    <relationshipName>Trigger_Validations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>